Fix user info block visiblity with no theme.

--- a/sass/styles/base/_empty.sass
+++ b/sass/styles/base/_empty.sass
@@ -13,7 +13,14 @@ body.th-none
   .floating-menu .option.site-add,
   .floating-menu .option.switch-menu.second .text
     background: #ffffff
+  
+  .floating-menu .option.special
+    color: #000000
 
+  .floating-menu .option.special:hover
+    color: #ffffff
+
+  .ts-tab.active,
   .room-tab .flat-button:hover h3,
   #maindiv .song-list .song .scoregood
     color: #ffffff
